# test_lapack

./: CMakeLists.txt  main.cpp
test_mkl/: README.md  main.cpp
test_openblas/: CMakeLists.txt  main.cpp
